# case

./: .gitignore  README.md  pyproject.toml
case/: __init__.py  abc.py  api.py  base.py  cases.py  db.py  enums.py  errors.py  foundations.py  inspection.py  models.py  parsers.py  protocols.py  renderers.py  repositories.py  repository.py  style.py  styles.py  translators.py  types.py  utils.py
tests/: test_identification.py  test_renderers.py  test_styles.py  test_translators.py
