[tool.poetry]
name = "case"
version = "0.1.4"
description = "String case conversion, identification and parsing"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
parse = {git = "https://github.com/tombulled/parse.git", tag = "v0.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
